--- a/local/css/style.css
+++ b/local/css/style.css
@@ -254,6 +254,12 @@ width: 100%;
   flex-flow: row wrap;
   padding: 1em;
 }
+.display-flex{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
 .add-new-btn{
   background: #1D83E4 url() 95% 50% no-repeat;
   margin: 1em;
@@ -290,7 +296,10 @@ width: 100%;
   background-color: #D50000;
 }
 .justify-end{
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 .horizontal-line{
   position: absolute;
