--- a/local/css/frame.css
+++ b/local/css/frame.css
@@ -382,9 +382,11 @@
 }
 .sidebar-activity-log {
   /*background-color: #122C42;*/
+  width: 100%;
+  max-height: 40em;
   color: #949EAC;
   overflow: auto;
-  max-height: 40em;
+  padding: 0.5em 0;
 }
 .sidebar-activity-log > img {
   padding: 5em;
@@ -533,58 +535,16 @@
   position: relative;
   width: 100%;
 }
-.frame-info {
-  min-height: 5em;
-  border-bottom: 0.1em solid rgba(255, 255, 255, 0.25);
-  ;
-  padding: 1em;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
+.all-rooms-nav{
   display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
-
-/*
-.category-holder {
-  display: inherit;
-}
-.category-nav {
-  display: inherit;
-  list-style: none;
-  max-width: 40em;
+.all-rooms-view-point {
+  margin-top: 1em;
+  max-height: calc(100% - 5.5em);
   overflow: auto;
 }
-.category {
-  position: relative;
-  padding: 1em;
-  white-space: nowrap;
-  text-align: center;
-  cursor: pointer;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-.category > a {
-  color: #67859E;
-  padding: 1em;
-}
-.category > img {
-  position: absolute;
-  top: 0.25em;
-  right: 0.25em;
-}
-.category-active {
-  background: url(../img/button/category-active.png) 0% 50% no-repeat;
-  color: #fff;
-}
-.category-active > a {
-  color: #fff;
-  font-weight: bold;
-}*/
-
+.category-wrap {}
 .add-category-btn {
   background: rgba(255, 255, 255, 0.1) url(../img/button/add-room.png) 50% 50% no-repeat;
   height: 2.5em;
@@ -593,7 +553,7 @@
 }
 .add-category-wrap {
   background-color: #11599D;
-  border-radius: 0.35em;
+  border-radius: 0.3em;
   height: 2.5em;
   padding: 0.25em;
   padding-right: 0;
@@ -663,12 +623,32 @@
   width: 2.5em;
   border: 0;
 }
+.favorites-sensors-wrap{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+}
 .sensor-wrap {
-  display: inherit;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-top: 1.5em;
 }
 .info-sensor {
   position: relative;
@@ -725,7 +705,7 @@
   position: relative;
   margin-top: 1em;
   padding: 0 1em;
-  height: calc(100vh - 20em);
+  height: calc(100vh - 11em);
   overflow-y: auto;
   overflow-x: hidden;
 }
