--- a/local/css/scenes.css
+++ b/local/css/scenes.css
@@ -115,7 +115,7 @@
   box-shadow: none;
 }
 .assign-schedule-btn {
-  background: rgba(255, 255, 255, 0.7)url(../img/button/schedule.png) 50% 50% no-repeat;
+  background: rgba(255, 255, 255, 0.7)url(../img/button/schedule.svg) 50% 50% no-repeat;
   background-size: contain;
   margin: 0;
   padding: 0 2em;
@@ -221,7 +221,7 @@
   bottom: 0;
   background-color: #0F2A41;
   width: 100%;
-  height: 60%;
+  height: 65%;
   overflow: auto;
 }
 .new-scene-devices > div {
